--- a/static/css/base.css
+++ b/static/css/base.css
@@ -103,6 +103,27 @@ a.category-badge > span.badge:hover {
   cursor: pointer;
 }
 
+/* ------------------------------- bootstrap toasts */
+
+.message-container {
+  position: fixed;
+  top: 72px;
+  right: 15px;
+  z-index: 99999999999;
+}
+
+.custom-toast {
+  overflow: visible;
+}
+
+.toast {
+  opacity: 1 !important;
+}
+
+.toast-capper {
+  height: 2px;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
