add admin delete product view / button

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -82,6 +82,12 @@
                                             {% else %}
                                                 <small class="text-muted">No Rating</small>
                                             {% endif %}
+                                            {% if request.user.is_superuser %}
+                                                <small class="ml-3">
+                                                    <a href="{% url 'edit_product' product.id %}">Edit</a> |
+                                                    <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                                                </small>
+                                            {% endif %}
                                         </div>
                                     </div>
                                 </div>
@@ -119,7 +125,6 @@
     </div>
 {% endblock %}
 
-
 {% block postloadjs %}
     {{ block.super }}
     <script type="text/javascript">
@@ -129,7 +134,7 @@
 	</script>
 
     <script type="text/javascript">
-        $("#sort-selector").change(function() {
+        $('#sort-selector').change(function() {
             var selector = $(this);
             var currentUrl = new URL(window.location);
 
@@ -143,12 +148,11 @@
 
                 window.location.replace(currentUrl);
             } else {
-            currentUrl.searchParams.delete("sort", sort);
-            currentUrl.searchParams.delete("direction", direction);
+                currentUrl.searchParams.delete("sort");
+                currentUrl.searchParams.delete("direction");
 
-            window.location.replace(currentUrl);
+                window.location.replace(currentUrl);
             }
-
         })
     </script>
 {% endblock %}
